--- a/pom.xml
+++ b/pom.xml
@@ -498,6 +498,14 @@
       <version>1.18.24</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220924</version>
+    </dependency>
+
   </dependencies>
 
   <dependencyManagement>
