--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.telus.mediation.dataflow</groupId>
-  <artifactId>ccs-datahub-load</artifactId>
-  <version>0.1</version>
+  <artifactId>cio-mediation-datahub-load</artifactId>
+  <version>0.0.1</version>
 
   <packaging>jar</packaging>
 
@@ -101,6 +101,15 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>${maven-jar-plugin.version}</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.telus.mediation.dataflow.ExtractGzipPubSubToBQ</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
 
       <!--
@@ -505,6 +514,14 @@
       <artifactId>json</artifactId>
       <version>20220924</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.beam/beam-runners-google-cloud-dataflow-java -->
+    <dependency>
+      <groupId>org.apache.beam</groupId>
+      <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
+      <version>2.43.0</version>
+    </dependency>
+
 
   </dependencies>
 
